# Visual-Odometry

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_config.json
docs/: BP šablonas LT [2026].docx
sim/: sim.blend
src/: app.py  constants.py  dialogs.py  geofence.py  widgets.py
src/drone_geofence/: __init__.py  __main__.py  app.py  constants.py  dialogs.py  engine.py  tile_loader.py  widgets.py
src/drone_geofence/benchmarks/: __init__.py  runner.py
