[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-geofence"
version = "0.2.0"
description = "Visual-odometry drone geofencing application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.4.2",
  "opencv-contrib-python>=4.13.0.92",
  "rasterio>=1.4.3",
  "shapely>=2.1.0",
  "PySide6>=6.8.0",
]

[project.scripts]
drone-geofence = "drone_geofence.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["drone_geofence*"]

[tool.setuptools.package-data]
drone_geofence = ["assets/*.ico"]

[dependency-groups]
dev = ["black>=26.1.0"]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | data
  | __pycache__
)/
'''
